# DORIS

./: .gitignore  README.TXT  README.rst  README_pip.rst  doris.ui  pyproject.toml  setup.py  start_doris.py
doris/: README.TXT  __init__.py  __main__.py  config.py  dialog.py  doris.py  doris.qrc  doris.ui  doris_functions.py  doris_qrc.py  doris_ui.py  version.py
src/: config.py  dialog.py  doris.py  doris.ui  doris_functions.py  doris_ui.py  version.py
